Removed All Warnings